chore: update case query view

--- a/views/index.html
+++ b/views/index.html
@@ -24,16 +24,6 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
     
-    <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="http://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>-->
-
-    <!-- jQuery must have to be imported before importing materialize.js! -->
-<!--    <script src="js/materialize.min.js"></script>
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="css/materialize.min.css">
-    <link rel="stylesheet" href="css/loader.css">
-    <link rel="stylesheet" href="css/modal-register.css">-->
 </head>
 
 <body>
@@ -220,7 +210,7 @@
           <option value="3">Normal</option>
           <option value="4">Bastante</option>
           </select>
-          <label>Consumo de Salada</label>
+          <label>Consumo de Álcool</label>
         </div>
 
         <div class="input-field col s6">
@@ -231,7 +221,7 @@
           <option value="3">Normal</option>
           <option value="4">Bastante</option>
           </select>
-          <label>Consumo de Frutas</label>
+          <label>Co1nsumo de Frutas</label>
         </div>  
       </div>
 
