--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,7 @@
 <div class="container">
   <div class="row">
 
-    <form class="col s12">
+    <form class="col s12" method="GET">
 
       <div class="row">
         <div class="input-field col s6">
@@ -224,7 +224,7 @@
           <label>Co1nsumo de Frutas</label>
         </div>  
       </div>
-
+      <input type="submit" value="Submit">1
   </form>
   </div>
 </div>
